Install salt using the bootstrap script

--- a/installed/arch/Dockerfile
+++ b/installed/arch/Dockerfile
@@ -2,5 +2,5 @@ from saltstack/arch-minimal
 MAINTAINER SaltStack, Inc.
 
 
-# Install Salt
-RUN easy_install-2.7 https://github.com/saltstack/salt/archive/develop.tar.gz
+# Install Latest Salt from the Develop Branch
+RUN curl -L http://bootstrap.saltstack.org | sudo sh -s -- git develop
