--- a/testing/arch/Dockerfile
+++ b/testing/arch/Dockerfile
@@ -32,6 +32,8 @@ RUN pacman -Sy --noconfirm ruby
 RUN pacman -Sy --noconfirm git
 RUN pacman -Sy --noconfirm subversion
 RUN pacman -Sy --noconfirm mercurial
+RUN pacman -Sy --noconfirm python2-pip
 RUN pacman -Sy --noconfirm python2-virtualenv
+RUN pacman -Sy --noconfirm mysql-python
 RUN easy_install-2.7 mock timelib apache-libcloud
 RUN easy_install-2.7 https://github.com/saltstack/salt-testing/archive/develop.tar.gz
