`which` is a required package for salt.

--- a/minimal/centos-5/Dockerfile
+++ b/minimal/centos-5/Dockerfile
@@ -7,6 +7,9 @@ RUN rpm -Uvh --force http://mirrors.kernel.org/fedora-epel/5/x86_64/epel-release
 # Update Current Image
 RUN yum update -y
 
+# Install system binaries required by salt
+RUN yum -y install --enablerepo=epel which
+
 # Install Salt Dependencies
 RUN yum -y install --enablerepo=epel python26
 RUN yum -y install --enablerepo=epel python26-PyYAML
