`which` should also be installed on CentOS 6

--- a/minimal/centos-6/Dockerfile
+++ b/minimal/centos-6/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER SaltStack, Inc.
 RUN rpm -Uvh --force http://mirrors.kernel.org/fedora-epel/6/x86_64/epel-release-6-8.noarch.rpm
 
 # Update Current Image
-RUN yum install -y libcom_err
+RUN yum install -y libcom_err which
 RUN yum update -y
 
 # Install Salt Dependencies
