There's no other command to execute, remove the `&&`

--- a/minimal/debian-7/Dockerfile
+++ b/minimal/debian-7/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get upgrade -y -o DPkg::Options::=--force-confold
 # Install The Salt Debian Repository
 RUN apt-get install -y -o DPkg::Options::=--force-confold wget && \
   wget -q -O- "http://debian.saltstack.com/debian-salt-team-joehealy.gpg.key" | apt-key add - && \
-  echo "deb http://debian.saltstack.com/debian wheezy-saltstack main" > /etc/apt/sources.list.d/saltstack.list && \
+  echo "deb http://debian.saltstack.com/debian wheezy-saltstack main" > /etc/apt/sources.list.d/saltstack.list
 
 # Upgrade The System
 RUN apt-get update && apt-get upgrade -y -o DPkg::Options::=--force-confold
