Reduce the number of steps

--- a/minimal/centos-6/Dockerfile
+++ b/minimal/centos-6/Dockerfile
@@ -5,14 +5,14 @@ MAINTAINER SaltStack, Inc.
 RUN rpm -Uvh --force http://mirrors.kernel.org/fedora-epel/6/x86_64/epel-release-6-8.noarch.rpm
 
 # Update Current Image
-RUN yum install -y libcom_err which
-RUN yum update -y
+RUN yum install -y libcom_err && yum update -y
 
 # Install Salt Dependencies
-RUN yum -y install --enablerepo=epel python
-RUN yum -y install --enablerepo=epel PyYAML
-RUN yum -y install --enablerepo=epel m2crypto
-RUN yum -y install --enablerepo=epel python-crypto
-RUN yum -y install --enablerepo=epel python-msgpack
-RUN yum -y install --enablerepo=epel python-zmq
-RUN yum -y install --enablerepo=epel python-jinja2
+RUN yum -y install --enablerepo=epel \
+  python \
+  PyYAML \
+  m2crypto \
+  python-crypto \
+  python-msgpack \
+  python-zmq \
+  python-jinja2 \
