--- a/minimal/opensuse-12.3/Dockerfile
+++ b/minimal/opensuse-12.3/Dockerfile
@@ -1,11 +1,10 @@
 from flavio/opensuse-12-3
 MAINTAINER SaltStack, Inc.
 
-# Install the Python repository
-RUN zypper --non-interactive addrepo --refresh http://download.opensuse.org/repositories/devel:/languages:/python/openSUSE_12.3/devel:languages:python.repo
-
-# Refresh repositories
-RUN zypper --gpg-auto-import-keys --non-interactive refresh
+# Install the Python repository & Refresh repositories
+RUN zypper --non-interactive addrepo --refresh \
+  http://download.opensuse.org/repositories/devel:/languages:/python/openSUSE_12.3/devel:languages:python.repo && \
+  zypper --gpg-auto-import-keys --non-interactive refresh
 
 # Because patterns-openSUSE-minimal_base-conflicts conflicts with python, lets remove the first one
 RUN zypper --non-interactive remove patterns-openSUSE-minimal_base-conflicts
@@ -14,12 +13,13 @@ RUN zypper --non-interactive remove patterns-openSUSE-minimal_base-conflicts
 RUN zypper --gpg-auto-import-keys --non-interactive update
 
 # Install Salt Dependencies
-RUN zypper --non-interactive install --auto-agree-with-licenses libzmq3
-RUN zypper --non-interactive install --auto-agree-with-licenses python
-RUN zypper --non-interactive install --auto-agree-with-licenses python-Jinja2
-RUN zypper --non-interactive install --auto-agree-with-licenses python-M2Crypto
-RUN zypper --non-interactive install --auto-agree-with-licenses python-PyYAML
-RUN zypper --non-interactive install --auto-agree-with-licenses python-msgpack-python
-RUN zypper --non-interactive install --auto-agree-with-licenses python-pycrypto
-RUN zypper --non-interactive install --auto-agree-with-licenses python-pyzmq
-RUN zypper --non-interactive install --auto-agree-with-licenses python-xml
+RUN zypper --non-interactive install --auto-agree-with-licenses \
+  libzmq3 \
+  python \
+  python-Jinja2 \
+  python-M2Crypto \
+  python-PyYAML \
+  python-msgpack-python \
+  python-pycrypto \
+  python-pyzmq \
+  python-xml
