Reduce the number of steps and install tar and psutil

--- a/testing/arch/Dockerfile
+++ b/testing/arch/Dockerfile
@@ -6,24 +6,28 @@ RUN pacman -Syyu --noconfirm
 RUN pacman -Sy --noconfirm --needed base-devel
 
 #   Required Testing Libraries
-RUN pacman -Sy --noconfirm python2-pip
-RUN pacman -Sy --noconfirm python2-mock
-RUN pacman -Sy --noconfirm python2-virtualenv
-RUN pacman -Sy --noconfirm python2-setuptools
-RUN pacman -Sy --noconfirm mysql-python
-RUN pacman -Sy --noconfirm ruby
+RUN pacman -Sy --noconfirm \
+  tar \
+  which \
+  python2-pip \
+  python2-mock \
+  python2-virtualenv \
+  python2-setuptools \
+  mysql-python \
+  ruby \
+  git \
+  subversion \
+  mercurial \
+  openssh \
+  subversion
 
-#   Required Testing CLI Binaries
-RUN pacman -Sy --noconfirm git
-RUN pacman -Sy --noconfirm subversion
-RUN pacman -Sy --noconfirm mercurial
-
-#   Required Testing Daemons
-RUN pacman -Sy --noconfirm openssh
-RUN pacman -Sy --noconfirm subversion
 #RUN yaourt -Sy --noconfirm --aur rabbitmq
 
 #   Requirements only available trough PyPi
-RUN easy_install-2.7 timelib apache-libcloud coverage \
+RUN easy_install-2.7 \
+  timelib \
+  apache-libcloud \
+  coverage \
+  psutil \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
