--- a/testing/centos-5/Dockerfile
+++ b/testing/centos-5/Dockerfile
@@ -1,29 +1,35 @@
 from saltstack/centos-5-minimal
 MAINTAINER SaltStack, Inc.
 
+# Update Current Image
+RUN yum update -y
+
 # Install Salt's Test Suite Dependencies
-#   Required testing build dependencies
-RUN yum install -y --enablerepo=epel gcc
-RUN yum install -y --enablerepo=epel python26-devel
-RUN yum install -y --enablerepo=epel python26-setuptools
-#   Required testing build dependencies only available trough PyPi
-RUN easy_install-2.6 coverage https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
-
-#   Required Testing Libraries
-RUN yum install -y --enablerepo=epel python26-virtualenv
-RUN yum install -y --enablerepo=epel python26-mysqldb
-RUN yum install -y --enablerepo=epel ruby
-
-#   Required Testing CLI Binaries
-RUN yum install -y --enablerepo=epel git
-RUN yum install -y --enablerepo=epel subversion
-RUN yum install -y --enablerepo=epel mercurial
-
-#   Required Testing Daemons
-RUN yum install -y --enablerepo=epel openssl
-RUN yum install -y --enablerepo=epel supervisor
-RUN yum install -y --enablerepo=epel rabbitmq-server
+RUN yum install -y --enablerepo=epel \
+  tar \
+  which \
+  gcc \
+  python26-devel \
+  python26-setuptools \
+  python26-virtualenv \
+  python26-mysqldb \
+  ruby \
+  git \
+  subversion \
+  mercurial \
+  openssl \
+  supervisor \
+  rabbitmq-server
 
 #   Requirements only available trough PyPi
 # python26-pip is not available
-RUN easy_install-2.6 pip unittest2 mock timelib apache-libcloud https://github.com/saltstack/salt-testing/archive/develop.tar.gz
+RUN easy_install-2.6 \
+  pip \
+  psutil \
+  unittest2 \
+  mock \
+  timelib \
+  apache-libcloud \
+  coverage \
+  https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
+  https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
