Reduce the number of steps and install tar, which and psutil

--- a/testing/centos-6/Dockerfile
+++ b/testing/centos-6/Dockerfile
@@ -3,27 +3,31 @@ MAINTAINER SaltStack, Inc.
 
 # Install Salt's Test Suite Dependencies
 #   Required testing build dependencies
-RUN yum install -y --enablerepo=epel gcc
-RUN yum install -y --enablerepo=epel python-devel
-RUN yum install -y --enablerepo=epel python-setuptools
-
-#   Required Testing Libraries
-RUN yum install -y --enablerepo=epel python-virtualenv
-RUN yum install -y --enablerepo=epel MySQL-python
-RUN yum install -y --enablerepo=epel ruby
-
-#   Required Testing CLI Binaries
-RUN yum install -y --enablerepo=epel git
-RUN yum install -y --enablerepo=epel subversion
-RUN yum install -y --enablerepo=epel mercurial
-
-#   Required Testing Daemons
-RUN yum install -y --enablerepo=epel openssl
-RUN yum install -y --enablerepo=epel supervisor
-RUN yum install -y --enablerepo=epel rabbitmq-server
+RUN yum install -y --enablerepo=epel \
+  tar \
+  gcc \
+  which \
+  python-devel \
+  python-setuptools \
+  python-virtualenv \
+  MySQL-python \
+  ruby \
+  git \
+  subversion \
+  mercurial \
+  openssl \
+  supervisor \
+  rabbitmq-server
 
 #   Requirements only available trough PyPi
 # python26-pip is not available
-RUN easy_install pip mock timelib apache-libcloud unittest2 coverage \
+RUN easy_install \
+  pip \
+  mock \
+  timelib \
+  apache-libcloud \
+  unittest2 \
+  coverage \
+  psutil \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
