--- a/testing/ubuntu-13.10/Dockerfile
+++ b/testing/ubuntu-13.10/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get install -y -o DPkg::Options::=--force-confold \
   mercurial \
   supervidor \
   openssh-client \
-  rabbitmq-server \
+  rabbitmq-server
 
 RUN easy_install \
   mock \
