--- a/installed/arch/Dockerfile
+++ b/installed/arch/Dockerfile
@@ -1,6 +1,8 @@
 from saltstack/arch-minimal
 MAINTAINER SaltStack, Inc.
 
+# Update Packages & Upgrade System
+RUN pacman -Syyu --noconfirm
 
 # Install Latest Salt from the Develop Branch
-RUN curl -L http://bootstrap.saltstack.org | sudo sh -s -- git develop
+RUN curl -L http://bootstrap.saltstack.org | sh -s -- git develop
