Leave RabbitMQ running

--- a/testing/ubuntu-12.04/Dockerfile
+++ b/testing/ubuntu-12.04/Dockerfile
@@ -26,3 +26,6 @@ RUN easy_install \
   coverage \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
+
+# Let's have RabbitMQ running
+RUN rabbitmq-plugins enable rabbitmq_management && /usr/sbin/rabbitmq-server &
