--- a/testing/ubuntu-12.04/Dockerfile
+++ b/testing/ubuntu-12.04/Dockerfile
@@ -27,5 +27,8 @@ RUN easy_install \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
 
-# Let's have RabbitMQ running
-RUN rabbitmq-plugins enable rabbitmq_management && /usr/sbin/rabbitmq-server &
+ADD https://raw.github.com/saltstack/docker-containers/master/scripts/bootstrap-docker.sh /bootstrap-docker.sh
+
+ENTRYPOINT ["/bin/sh", "/bootstrap-docker.sh", \
+  "/etc/init.d/supervisor start", \
+  "/etc/init.d/rabbitmq-server start"]
