Install supervisor and make it run when container starts

--- a/testing/arch/Dockerfile
+++ b/testing/arch/Dockerfile
@@ -17,6 +17,7 @@ RUN pacman -Sy --noconfirm \
   python2-virtualenv \
   ruby \
   subversion \
+  supervisor \
   tar \
   which
 
@@ -30,3 +31,8 @@ RUN easy_install-2.7 \
   timelib \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
+
+ADD https://raw.github.com/saltstack/docker-containers/master/scripts/bootstrap-docker.sh /bootstrap-docker.sh
+
+ENTRYPOINT ["/bin/sh", "/bootstrap-docker.sh", \
+  "supervisord"]
