Start supervisor and rabbitmq to run the tests suite on Debian 7

--- a/testing/debian-7/Dockerfile
+++ b/testing/debian-7/Dockerfile
@@ -30,3 +30,9 @@ RUN easy_install \
   coverage \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
+
+ADD https://raw.github.com/saltstack/docker-containers/master/scripts/bootstrap-docker.sh /bootstrap-docker.sh
+
+ENTRYPOINT ["/bin/sh", "/bootstrap-docker.sh", \
+  "/etc/init.d/supervisor start", \
+  "/etc/init.d/rabbitmq-server start"]
