--- a/minimal/ubuntu-13.10/Dockerfile
+++ b/minimal/ubuntu-13.10/Dockerfile
@@ -23,4 +23,5 @@ RUN apt-get install -y -o DPkg::Options::=--force-confold \
   python-crypto \
   msgpack-python \
   python-zmq \
-  python-jinja2
+  python-jinja2 \
+  python-requests
