--- a/installed/centos-6/Dockerfile
+++ b/installed/centos-6/Dockerfile
@@ -5,4 +5,4 @@ MAINTAINER SaltStack, Inc.
 RUN yum update -y && yum install -y --enablerepo=epel curl
 
 # Install Latest Salt from the Develop Branch
-RUN curl -L http://bootstrap.saltstack.org | sh -s -- git develop
+RUN curl -L http://bootstrap.saltstack.org | sh -s -- -X git develop
