Update required testing libs. Add Ubuntu 14.04

--- a/testing/centos-5/Dockerfile
+++ b/testing/centos-5/Dockerfile
@@ -31,6 +31,14 @@ RUN easy_install-2.6 \
   timelib \
   apache-libcloud \
   coverage \
+  GitPython \
+  requests \
+  keyring \
+  python-gnupg \
+  CherryPy \
+  tornado \
+  boto \
+  moto \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
 
