--- a/testing/opensuse-12.3/Dockerfile
+++ b/testing/opensuse-12.3/Dockerfile
@@ -26,6 +26,14 @@ RUN zypper --non-interactive install --auto-agree-with-licenses \
 RUN easy_install \
   timelib \
   apache-libcloud \
+  GitPython \
+  requests \
+  keyring \
+  python-gnupg \
+  CherryPy \
+  tornado \
+  boto \
+  moto \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
 
