--- a/testing/centos-6/Dockerfile
+++ b/testing/centos-6/Dockerfile
@@ -29,6 +29,14 @@ RUN easy_install \
   unittest2 \
   coverage \
   psutil \
+  GitPython \
+  requests \
+  keyring \
+  python-gnupg \
+  CherryPy \
+  tornado \
+  boto \
+  moto \
   https://github.com/saltstack/salt-testing/archive/develop.tar.gz \
   https://github.com/danielfm/unittest-xml-reporting/archive/master.tar.gz
 
