--- a/minimal/ubuntu-12.10/Dockerfile
+++ b/minimal/ubuntu-12.10/Dockerfile
@@ -6,7 +6,7 @@ MAINTAINER SaltStack, Inc.
 # RUN ln -s /bin/true /sbin/initctl
 
 # Enable the necessary sources and upgrade to latest
-RUN echo "deb http://archive.ubuntu.com/ubuntu quantal main universe multiverse restricted" > /etc/apt/sources.list && \
+RUN echo "deb http://old-releases.ubuntu.com/ubuntu quantal main universe multiverse restricted" > /etc/apt/sources.list && \
   apt-get update && \
   apt-get upgrade -y -o DPkg::Options::=--force-confold
 
