Install Jinja2 and requests from pip

--- a/minimal/centos-6/Dockerfile
+++ b/minimal/centos-6/Dockerfile
@@ -15,5 +15,8 @@ RUN yum -y install --enablerepo=epel \
   python-crypto \
   python-msgpack \
   python-zmq \
-  python-jinja2 \
-  python-requests
+  python-setuptools \
+
+RUN easy_install \
+  jinja2 \
+  requests
