Add aaa_base package
For essentials like chkconfig, service...

--- a/minimal/opensuse-13.2/Dockerfile
+++ b/minimal/opensuse-13.2/Dockerfile
@@ -23,4 +23,5 @@ RUN zypper --non-interactive install --auto-agree-with-licenses \
   python-pycrypto \
   python-pyzmq \
   python-xml \
-  python-requests
+  python-requests \
+  aaa_base
